Refactored Prover UI to prepare for new tactic provider extensions.
svn path=/trunk/RodinCore/org.eventb.ui/; revision=7526